# libft_improved

./: .gitignore  CMakeLists.txt  Makefile  README.md  compile_and_test.sh  run.sh
ft_is/: ft_isalnum.c  ft_isalpha.c  ft_isascii.c  ft_isdigit.c  ft_isint.c  ft_isprint.c
ft_lst/: ft_lstadd_back.c  ft_lstadd_front.c  ft_lstclear.c  ft_lstdelone.c  ft_lstiter.c  ft_lstlast.c  ft_lstmap.c  ft_lstnew.c  ft_lstsize.c
ft_math/: ft_min_max_abs.c
ft_mem/: ft_bzero.c  ft_calloc.c  ft_memalloc.c  ft_memccpy.c  ft_memchr.c  ft_memcmp.c  ft_memcpy.c  ft_memdel.c  ft_memmove.c  ft_memset.c
ft_printf/: core_functions.c  flag_checking.c  ft_lst.c  ft_printf.c  ft_printf_priv.h  misc.c  padding.c  precision.c
ft_put/: ft_putchar.c  ft_putchar_err.c  ft_putchar_fd.c  ft_putendl.c  ft_putendl_err.c  ft_putendl_fd.c  ft_putnbr.c  ft_putnbr_err.c  ft_putnbr_fd.c  ft_putstr.c  ft_putstr_err.c  ft_putstr_fd.c  ft_putwchar.c  ft_putwchar_fd.c
ft_str/: ft_split.c  ft_strappend.c  ft_strcat.c  ft_strchr.c  ft_strclr.c  ft_strcmp.c  ft_strcpy.c  ft_strdel.c  ft_strdup.c  ft_strequ.c  ft_stris.c  ft_striter.c  ft_striteri.c  ft_strjoin.c  ft_strlcat.c  ft_strlcpy.c  ft_strlen.c  ft_strmap.c  ft_strmapi.c  ft_strnappend.c  ft_strncat.c  ft_strncmp.c  ft_strncpy.c  ft_strnequ.c  ft_strnew.c  ft_strnjoin.c  ft_strnstr.c  ft_strrchr.c  ft_strsplit.c  ft_strstr.c  ft_strsub.c  ft_strtrim.c  ft_substr.c
ft_to/: ft_atoi.c  ft_itoa.c  ft_itoa_base.c  ft_tolower.c  ft_toupper.c  ft_wctomb.c
gnl/: .gitignore  get_next_line.c  get_next_line_priv.h  get_next_line_utils.c  gnl_buf_to_tok.c  gnl_join_tokens.c  gnl_read.c  gnl_run.c
includes/: get_next_line.h  libft.h  libftprintf.h
libft_original/: .gitignore  ft_isascii.c  ft_isdigit.c  ft_isprint.c  ft_lstmap.c  ft_lstnew.c  ft_memchr.c  ft_memcmp.c  ft_memdel.c  ft_memmove.c  ft_putchar.c  ft_putchar_fd.c  ft_putendl.c  ft_putnbr.c  ft_putnbr_fd.c  ft_putstr.c  ft_putwchar.c  ft_putwchar_fd.c  ft_split.c  ft_strcat.c  ft_strchr.c  ft_strcpy.c  ft_stris.c  ft_strjoin.c  ft_strlcat.c  ft_strlcpy.c  ft_strlen.c  ft_strmap.c  ft_strmapi.c  ft_strncmp.c  ft_strncpy.c  ft_strnew.c  ft_strnstr.c  ft_strsplit.c  ft_strstr.c  ft_strtrim.c  ft_tolower.c
tests/: CMakeLists.txt  ft_stris_test.cc  ft_striteri_test.cc  ft_strmapi_test.cc  ft_strnstr_test.cc  ft_strrchr_test.cc  test_ft_isalnum.cc  test_ft_strcmp.cc
tests/ft_is/: ft_isalnum_test.cc  ft_isalpha_test.cc  ft_isdigit_test.cc  ft_isprint_test.cc  test_ft_isalnum.cc  test_ft_isalpha.cc  test_ft_isascii.cc  test_ft_isdigit.cc  test_ft_isprint.cc
tests/ft_mem/: ft_calloc_test.cc  ft_memdel_test.cc
tests/ft_str/: ft_split_test.cc  ft_strappend_test.cc  ft_strcat_test.cc  ft_strchr_test.cc  ft_strcmp_test.cc  ft_strcpy_test.cc  ft_strdel_test.cc  ft_strdup_test.cc  ft_striter_test.cc  ft_strjoin_test.cc  ft_strlcat_test.cc  ft_strlcpy_test.cc  ft_strlen_test.cc  ft_strmap_test.cc  ft_strnappend_test.cc  ft_strncat_test.cc  ft_strncmp_test.cc  ft_strncpy_test.cc  ft_strnew_test.cc  ft_strnjoin_test.cc  ft_strstr_test.cc  ft_strtrim_test.cc  ft_substr_test.cc
tests/ft_to/: ft_itoa_base_test.cc  ft_itoa_test.cc  ft_wctomb_test.cc  test_ft_atoi.cc  test_ft_itoa_base.cc  test_ft_tolower.cc  test_ft_toupper.cc
tests/gnl/: get_next_line_test.cc
